@@ -160,6 +160,7 @@ class IMP_Dynamic_Mailbox extends IMP_Dynamic_Base
                 'mboxzip' => _("Download into a MBOX file (ZIP compressed)")
             ),
             'filter_any' => intval($prefs->getValue('filter_any_mailbox')),
+            'from_link' => intval($prefs->getValue('from_link') == 0),
             'fsearchid' => IMP_Mailbox::formTo(IMP_Search::MBOX_PREFIX . IMP_Search::DIMP_FILTERSEARCH),
             'initial_page' => is_null($initial_page = IMP::getInitialPage()->mbox) ? null : $initial_page->form_to,
             'mbox_expand' => intval($prefs->getValue('nav_expanded') == 2),
