@@ -2,6 +2,7 @@
 v6.2.0-git
 ----------
 
+[mms] Honor 'from_link' preference in dynamic view.
 [mms] Add support for storing image data within HTML signatures.
 [mms] Ensure that viewing large mailboxes does not overload the session
       storage size.
